# gentifyer

./: .gitignore  README.md  device.py  fs.py  main.py  meson.build  partitioner.py  screen.py  setup.py  size.py
include/ui/: component.hpp  screen.hpp
src/: main.cpp  screen.cpp
